# splice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  include.hpp  main.cpp
.github/workflows/: splice.yml
composite/: cart_component.hpp  menu_component.hpp  party_component.hpp
composite/cart/: cart_items.hpp  user_cart.hpp
composite/cart/test/: cart_test.cpp  cart_test.hpp
composite/interface/: fastfood_display.cpp  fastfood_display.hpp  menu_chickfila_display.hpp  menu_deltaco_display.hpp  menu_elpolloloco_display.hpp  menu_innout_display.hpp  menu_mcdonalds_display.hpp  menu_tacobell_display.hpp
composite/menu_burger/header/: menu_chickfila.hpp  menu_innout.hpp  menu_items_chickfila.hpp  menu_items_innout.hpp  menu_items_mcdonalds.hpp  menu_mcdonalds.hpp
composite/menu_burger/tests/: menu_burger_tests.cpp  menu_chickfila_tests.hpp  menu_innout_tests.hpp  menu_mcdonalds_tests.hpp
composite/menu_pizza/header/: menu_dominos.hpp  menu_items_dominos.hpp  menu_items_papajohns.hpp  menu_items_pizzahut.hpp  menu_papajohns.hpp  menu_pizzahut.hpp
composite/menu_pizza/tests/: menu_dominos_tests.hpp  menu_papajohns_tests.hpp  menu_pizza_tests.cpp  menu_pizzahut_tests.hpp
composite/menu_taco/header/: menu_deltaco.hpp  menu_elpolloloco.hpp  menu_items_deltaco.hpp  menu_items_elpolloloco.hpp  menu_items_tacobell.hpp  menu_tacobell.hpp
composite/menu_taco/tests/: menu_deltaco_tests.hpp  menu_elpolloloco_tests.hpp  menu_taco_tests.cpp  menu_tacobell_tests.hpp
composite/party/: party.hpp  user.hpp
composite/party_tests/: party_test.cpp  party_test.hpp
interface/: fastfood_display.cpp  fastfood_display.hpp  menu_chickfila_display.hpp  menu_dominos_display.hpp  menu_mcdonalds_display.hpp  menu_papajohns_display.hpp  menu_pizzahut_display.hpp  menu_tacobell_display.hpp
prototype/header/: fastfood_category_burger.hpp  fastfood_category_pizza.hpp  fastfood_category_taco.hpp  fastfood_client.hpp  fastfood_creator.hpp  fastfood_restaurant.hpp  restaurant.hpp
prototype/src/: fastfood_category_burger.cpp  fastfood_category_pizza.cpp  fastfood_category_taco.cpp  fastfood_client.cpp  fastfood_creator.cpp  fastfood_restaurant.cpp  restaurant.cpp
prototype/tests/: fastfood_tests.hpp  restaurant_unit_test.cpp
